--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,6 +3,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
+}
+
+.block{
+  margin-top: -5rem;
+  width: 10%;
+  text-align: center;
+}
+
+.loader{
+  width: 100%;
+  margin-top: 1.5rem;
+  height: 5px;
 }
