--- a/app/lockscreen/page.module.css
+++ b/app/lockscreen/page.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 70vh;
+    min-height: 80vh;
 }
 
 .lockBg{
@@ -14,8 +14,13 @@
     z-index: 1;
 }
 
+.message{
+    margin-top: 1rem;
+}
+
 .auth{
     text-align: center;
+
 }
 
 .authCredentials{
@@ -36,16 +41,11 @@
 }
 
 
-.authName{
+.authName > input{
     background-color: white;
+    border: none;
     opacity: 0.25;
     border-radius: 30px;
-    width: 100%;
-}
-
-.authName > input{
-    background: transparent;
-    border: none;
     font-size: 1rem;
     padding: 8px 20px;
     color: black;
